--- a/my_memos/package.json
+++ b/my_memos/package.json
@@ -14,6 +14,7 @@
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
