--- a/my_memos/package.json
+++ b/my_memos/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "axios": "^1.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
